Yeni sistemler eklendi
/açlık
/doygunluk
/sağlık
/doyur
/tokla
/iyileştir

komutları eklendi

tab completion sistemi eklendi